--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 		            	<li class="d-flex"><span>Date of birth:</span> <span>September 13, 2010</span></li>
 		            	<li class="d-flex"><span>Address:</span> <span>No:9, Amikanle Community-Road Ade-Ajayi Street</span></li>
 		            	<li class="d-flex"><span>Zip code:</span> <span>10001</span></li>
-		            	<li class="d-flex"><span>Email:</span> <span>shobakinalameen@gmail.com</span></li>
+		            	<li class="d-flex"><span>Email:</span> <span>shobakinalameen13@gmail.com</span></li>
 		            	<li class="d-flex"><span>Phone: </span> <span>+234-2306-9154</span></li>
 		            </ul>
 		          </div>
@@ -136,7 +136,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+            <p>Passionate and skilled Web Developer with years of experience in designing, developing, and managing web-based applications. Adept in front-end and back-end development, creating responsive, user-friendly interfaces, and optimizing performance. Seeking to leverage my technical expertise and creativity to contribute to the growth of a forward-thinking company.</p>
           </div>
         </div>
     		<div class="row">
@@ -144,19 +144,19 @@
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2014-2015</span>
     					<h2>Server-Side Programming</h2>
-    					<span class="position">Cambridge University</span>
+    					<span class="position">University of Lagos</span>
     					<p class="mt-4">Share projects utilizing Node.js, Python, Ruby, or PHP, emphasizing performance and scalability.</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2014-2015</span>
     					<h2>API Development</h2>
-    					<span class="position">Cambridge University</span>
+    					<span class="position">University of Lagos</span>
     					<p class="mt-4">Provide examples of custom APIs you’ve built or integrated.</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2014-2015</span>
     					<h2>Online Stores</h2>
-    					<span class="position">Cambridge University</span>
+    					<span class="position">University of Lagos</span>
     					<p class="mt-4">Showcase e-commerce websites you’ve built or customized, including features like product catalogs and payment gateways.</p>
     				</div>
     			</div>
@@ -165,19 +165,19 @@
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2014-2015</span>
     					<h2>Database Management</h2>
-    					<span class="position">Cambridge University</span>
+    					<span class="position">University of Lagos</span>
     					<p class="mt-4">Show examples of database design and integration with applications.</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2014-2015</span>
     					<h2>Custom Website Design</h2>
-    					<span class="position">Cambridge University</span>
+    					<span class="position">University of Lagos</span>
     					<p class="mt-4">Highlight unique designs you’ve created, showcasing various styles and approaches.</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2017-2018</span>
     					<h2>UI/UX Designer</h2>
-    					<span class="position">Cambridge University</span>
+    					<span class="position">University of Lagos</span>
     					<p class="mt-4">Present case studies or screenshots demonstrating how you’ve enhanced user experience and interface design</p>
     				</div>
     			</div>
@@ -196,7 +196,7 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Services</h1>
             <h2 class="mb-4">Services</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <p>As a dedicated web developer, my goal is to transform your digital vision into reality through innovative and efficient web solutions. I specialize in creating user-centric websites and applications that not only look stunning but also perform seamlessly across all devices. My services are designed to cater to a wide range of needs, from developing dynamic front-end interfaces to building robust back-end systems.</p>
           </div>
         </div>
     		<div class="row">
@@ -272,7 +272,7 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Skills</h1>
             <h2 class="mb-4">My Skills</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <p>As a dedicated web developer, my objective is to utilize a comprehensive skill set to deliver exceptional web solutions that meet your specific needs and drive your digital success. Here’s a summary of the core skills I bring to every project.</p>
           </div>
         </div>
 				<div class="row">
@@ -353,7 +353,7 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">Our Projects</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <p>To design and develop a fully responsive and user-friendly e-commerce website for [Boldlinks], aimed at enhancing their online presence, improving customer engagement, and increasing sales. The website will provide a seamless shopping experience, integrating advanced features and best practices to meet the evolving needs of modern consumers.</p>
           </div>
         </div>
     		<div class="row">
@@ -426,7 +426,7 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Blog</h1>
             <h2 class="mb-4">Our Blog</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <p>In today's digital landscape, a strong online presence is crucial for success. As a passionate web developer, my primary objective is to help businesses and individuals achieve their digital goals through tailored web solutions. Here’s a closer look at what drives my work and how I can make a difference for you.</p>
           </div>
         </div>
         <div class="row d-flex">
@@ -529,7 +529,7 @@
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
 						<h2>I'm <span>Available</span> for freelancing</h2>
-						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+						<p>As a freelance web developer, my mission is to provide high-quality, customized web solutions that help businesses and individuals thrive online. My objective is to leverage my expertise in front-end and back-end development to deliver innovative and effective websites that align with your unique goals and needs.</p>
 						<p class="mb-0"><a href="https://wa.link/872rx1" class="btn btn-primary py-3 px-5">Hire me</a></p>
 					</div>
 				</div>
@@ -542,7 +542,7 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Contact</h1>
             <h2 class="mb-4">Contact Me</h2>
-            <!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p> -->
+			<p>Are you ready to transform your digital presence with a custom web solution? Whether you have a new project in mind, need to enhance an existing website, or simply want to discuss your web development needs, I’m here to help. My objective is to provide you with the expertise and support needed to achieve your online goals and create a website that truly represents your brand.</p>
           </div>
         </div>
 
@@ -571,7 +571,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="shobakinalameen@gmailcom">shobakinalameen@gmailcom</a></p>
+	            <p><a href="shobakinalameen13@gmailcom">shobakinalameen13@gmailcom</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -660,7 +660,7 @@
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">No:9, Ade-Ajayi Amikanle Community-Road Lagos.</span></li>
 	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+234-2306-9154</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">shobakinalameen@gmail.com</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">shobakinalameen13@gmail.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -670,7 +670,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="" target="_blank">Al-ameen</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
