--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+	<link rel="shortcut icon" href="project-2.jpg" type="image/x-icon">
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	  
@@ -608,7 +609,7 @@
           </div>
 
           <div class="col-md-6 d-flex">
-          	<div class="img" style="background-image: url(bg_2.jpg);"></div>
+          	<div class="img" style="background-image: url(bg_21.jpg);"></div>
           </div>
         </div>
       </div>
